
    Also please note that you should ensure that WXWIN_COMPATIBILITY_2_4
    is defined to 1 if you wish to retain maximal compatibility with 2.4
    series.

! windows are no longer fully repainted when resized, use new style
  wxFULL_REPAINT_ON_RESIZE to force this (wxNO_FULL_REPAINT_ON_RESIZE still
  exists but doesn't do anything any more, this behaviour is default now)


- no initialization/cleanup can be done in wxApp/~wxApp because they are
  now called much earlier/later than before; please move any exiting code
  from there to wxApp::OnInit()/OnExit()
- also, OnExit() is not called if OnInit() fails
- finally the program exit code is OnRun() return value, not OnExit() one
- wxTheApp can't be assigned to any longer, use wxApp::SetInstance() instead
- wxFileType::GetIcon() returns wxIconLocation, not wxIcon
- wxColourDatabase is not a wxList any more, use AddColour to add new colours
- wxWindow::Clear() is now called ClearBackground()
- pointer returned by wxFont::GetNativeFontInfo() must not be deleted now
- wxMouseEvent::Moving() doesn't return true if mouse is being dragged any more
- (most) controls now inherit parents colours by default, override
  ShouldInheritColours() to return false if you don't want this to happen
- wxApp::SendIdleEvent() now takes 2 arguments
- wxTabView::GetLayers() changed return type from wxList& to wxTabLayerList&
  (when WXWIN_COMPATIBILITY_2_4 == 0)
- wxID_SEPARATOR (id used for the menu separators) value changed from -1 to -2
- wxGetNumberFromUser() is now in separate wx/numdlg.h, not wx/textdlg.h
- wxChoice and wxCombobox now handle their size in the same way as in all the
  other ports under MSW, new code is actually correct but different from weird
  stuff they were doing before so the behaviour of your programs might change
- wxTaskBarIcon objects must now be destroyed before the application can exit.
  Previously, the application terminated if there were no top level windows;